added font-family, fix some problem

--- a/.vuepress/theme/style/main.scss
+++ b/.vuepress/theme/style/main.scss
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,700i');
 // Font.
 $font: (
   primary: ("Nunito Sans",sans-serif)
